--- a/src/components/shared/Members/Members.scss
+++ b/src/components/shared/Members/Members.scss
@@ -11,7 +11,7 @@
   &-content {
     width: 100%;
     gap: 12px;
-    padding: 8px 0 8px 12px !important;
+    padding: 8px 12px !important;
     @include flexbox(space-between, center, row, nowrap);
   }
 }
@@ -22,9 +22,6 @@
   align-items: center;
 }
 
-.member-name {
-  font-weight: 600;
-}
 .kick-text {
   font-size: 18px;
 }
@@ -38,6 +35,27 @@
   font-size: 1.2rem;
 }
 
-.scrum-master {
-  background-color: rgba(255, 99, 71, 0.1) !important;
+.divider {
+  width: 50%;
+  transition: all 0.5s ease-in-out;
+}
+
+.member {
+  &-name {
+    font-weight: 600;
+  }
+  &:hover .divider {
+    width: 100%;
+  }
+}
+.scrumMaster {
+  border-bottom: 2px solid red;
+}
+
+.player {
+  border-bottom: 2px solid green;
+}
+
+.observer {
+  border-bottom: 2px solid yellow;
 }
